feat: Create organization protected routes with corresponding dashboard content and automate frontend api.ts file
